--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Adham Ghallab",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^5.0.0",
     "csurf": "^1.2.2",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-handlebars": "^8.0.1",
@@ -22,6 +24,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.10.0",
     "pug": "^3.0.3",
     "sequelize": "^6.37.3"
   },
