--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "express-validator": "^7.2.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.10.0",
+    "pdfkit": "^0.16.0",
     "pug": "^3.0.3",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
